@@ -122,11 +122,6 @@ return [
 		],
 		'targets' => [ 'desktop', 'mobile' ],
 	],
-	'es6-promise' => [
-		'deprecated' => 'Use "es6-polyfills" instead.',
-		'dependencies' => [ 'es6-polyfills' ],
-		'targets' => [ 'desktop', 'mobile' ],
-	],
 	'es6-polyfills' => [
 		'scripts' => [
 			'resources/lib/promise-polyfill/promise-polyfill.js',
